--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=/" />
-  </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
+<head>
+    <meta http-equiv="refresh" content="0;url=index.html" />
+</head>
+<body>
+    <script>
+        sessionStorage.redirect = location.href;
+    </script>
+</body>
 </html>
